# haltode.fr

./: .gitignore  LICENSE  Makefile  README.md  README.rst  TODO  TODO.md  build.py  categories.sh  conversion.sh  napnac.ga  pyproject.toml  requirements.txt  server.conf
articles/: a_propos.md  accueil.md  articles.md  projets.md  recap.md  temp.md
builder/: builder.py  main.py  page.py
content/: articles.html  homepage.rst  index.rst
css/: article.css  base.css  index.css  movies.css  projects.css
docs/: CNAME  articles.html  gsoc2019.html  index.html  movies.html  travels.html
js/: utils.js
main_pages/: articles.html  index.html  projects.html
pages/: Accueil.md  temp.md
scripts/: README.md  build.py  custom_md_block.sh  full_update_server.sh  new_feed.sh  new_feed_entry.sh  quick_update_server.sh  runserver.sh  test_server.sh  update_server.sh
src/: a_propos.html  accueil.html  apprendre_entrainer.html  articles.html  chiffre_vernam.html  livres.html  projets.html  tableau_cumulatif.html  temp.html  tpe.html
static/: cisco-test.pgsql
templates/: a_propos.html  accueil.html  algo_training.html  article.html  base.html  default.html  default.html.jinja  erreur_404.html  erreur_50x.html  gsoc.html  homepage.html  homepage.html.jinja  index.html  liste_articles.html  master_plan.html  misc.html  movies.html  movies.html.jinja  projets.html  travels.html
tmp/: Accueil.tmp.html  Articles.tmp.html
website/: CNAME  a_propos.html  about.html  accueil.html  articles.html  erreur_404.html  erreur_50x.html  error_404.html  error_50x.html  feed.xml  (+3 more)
(+727 files in other folders)
